# pi-codex-adaptor

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRODUCT_CONTRACT.md  README.md  SECURITY.md  UPSTREAM_CODEX.toml  biome.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: dependabot.yml  release.yml
.github/release-please/: rc.json  stable.json
.github/workflows/: ci.yml  native.yml  release-pr.yml  release.yml
docs/: architecture.md  automatic-compaction-verification.md  bridge-protocol.md  compatibility.md  native-closure.md  official-baseline.md  remaining-gaps.md  security.md  ui-ux.md  upstream.md
docs/adr/: 0001-package-identity-and-versioning.md  0002-pinned-development-toolchain.md  0003-layered-architecture-and-bridge-boundary.md  0004-official-codex-source-and-conformance.md  0005-core-tool-surface-resolution.md  0006-official-compaction-paths.md  0007-versioned-project-configuration.md  0008-single-package-native-delivery.md  0009-release-please-and-exact-tarball-publishing.md  0010-responsive-terminal-experience.md  0011-explicit-provider-dispatch.md  0012-capability-completeness-and-supplemental-sessions.md  0013-codex-agent-tool-profile-isolation.md  0014-session-affine-provider-dispatch.md  0015-inline-automatic-compaction-and-opaque-replay.md  0016-activated-compaction-failure-ownership.md  0017-portable-primary-compaction-checkpoints.md  README.md
fixtures/: toolchain.json
fixtures/app-server-schema/: manifest.json
fixtures/bridge-protocol/: client-v1.jsonl  client-v2.jsonl  client-v3.jsonl  client-v4.jsonl  client-v5.jsonl  server-v1.jsonl  server-v2.jsonl  server-v3.jsonl  server-v4.jsonl  server-v5.jsonl
fixtures/official-conformance/: core-tools.json  update-plan-hosted-web.json
fixtures/release/: publication-states.json  release-please-lifecycle.json  sample-release-manifest.json
fixtures/responses/: allowlist.json  expected-normalized.json  request-basic.json  sse-basic.sse  websocket-basic.jsonl
native/: Cargo.toml
native/crates/bridge-protocol/: Cargo.toml
native/crates/bridge-protocol/src/: lib.rs
native/crates/codex-apply-patch-adapter/: Cargo.toml
native/crates/codex-apply-patch-adapter/src/: lib.rs
native/crates/codex-bridge/: Cargo.toml  build.rs
native/crates/codex-bridge/src/: api.rs  main.rs  models.rs  official.rs  remote_compaction_v2.rs  runtime.rs
native/official/: Cargo.toml
native/official/crates/codex-api/: Cargo.toml
native/official/crates/codex-async-utils/: Cargo.toml
native/official/crates/codex-client/: Cargo.toml
native/official/crates/codex-execpolicy/: Cargo.toml
native/official/crates/codex-extension-items/: Cargo.toml
native/official/crates/codex-http-client/: Cargo.toml
native/official/crates/codex-network-proxy/: Cargo.toml
native/official/crates/codex-protocol/: Cargo.toml
native/official/crates/codex-tools/: Cargo.toml
native/official/crates/codex-tools/src/: lib.rs
native/official/crates/codex-utils-absolute-path/: Cargo.toml
native/official/crates/codex-utils-cache/: Cargo.toml
native/official/crates/codex-utils-home-dir/: Cargo.toml
native/official/crates/codex-utils-image/: Cargo.toml
native/official/crates/codex-utils-output-truncation/: Cargo.toml
native/official/crates/codex-utils-path-uri/: Cargo.toml
native/official/crates/codex-utils-pty/: Cargo.toml
native/official/crates/codex-utils-rustls-provider/: Cargo.toml
native/official/crates/codex-utils-string/: Cargo.toml
native/official/crates/codex-websocket-client/: Cargo.toml
native/patches/openai-codex/: 0001-deserialize-responses-requests.patch  0002-cast-windows-pseudoconsole-handle.patch  0003-fix-apply-patch-eof-fallback.patch  0004-harden-responses-sse-errors.patch  0005-redact-http-client-tracing.patch
native/upstream/: openai-codex-files.json  openai-codex-licenses.json  openai-codex-sbom.json
scripts/: assemble-native-artifact.ts  assemble-package.ts  build-native.ts  check-architecture.ts  check-native.ts  generate-native-sbom.ts  generate-official-fixtures.ts  generate-official-workspace.ts  prepare-local-native.ts  publish-package.ts  sync-codex-upstream.ts  test-pi-fork.ts  verify-app-server-schema.ts  verify-bridge-integration.ts  verify-package.ts  verify-pr.ts  verify-release.ts  verify-toolchain.ts
src/: extension.ts
src/application/: README.md  codex-runtime.ts  compaction.ts  configuration.ts  diagnostics.ts  provider-activation.ts  resolve-effective-capabilities.ts  structured-json.ts  update-plan.ts
src/domain/: README.md  capability.ts  config.ts  plan.ts  provider-activation.ts  redaction.ts
tests/conformance/: allowlist.ts  capability-reachability.test.ts  product-vs-official.test.ts
tests/contract/: automatic-compaction-contract.test.ts  bridge-protocol.test.ts  responses-fixtures.test.ts
tests/integration/: automatic-compaction-continuation.test.ts  compaction-failure-ownership.test.ts  file-config-repository.test.ts  file-diagnostics-exporter.test.ts  interrupted-tool-call-continuation.test.ts  native-child-lifecycle.test.ts  pi-lifecycle.test.ts  sidecar-integrity.test.ts
tests/smoke/: extension.test.ts  pack-install.test.ts  pi-fork-provenance.test.ts  pi-loader.test.ts  tool-surface.test.ts
tests/ui/: approval-model.test.ts  approval-prompt.test.ts  codex-compaction-entry.test.ts  settings-keyboard.test.ts  settings-layout.test.ts  settings-overlay.test.ts
tests/unit/: architecture-boundary.test.ts  authentication.test.ts  bridge-binary.test.ts  bridge-client.test.ts  bridge-environment.test.ts  bundled-runtime-cancel.test.ts  capability.test.ts  ci-workflow.test.ts  codex-compaction-replay.test.ts  codex-provider-error.test.ts  codex-provider-request-guard.test.ts  codex-provider.test.ts  codex-status.test.ts  codex-system-prompt.test.ts  codex-tool-profile.test.ts  codex-tool-renderer.test.ts  codex-tools.test.ts  compaction.test.ts  config.test.ts  diagnostics.test.ts  local-native-workflow.test.ts  native-artifact-path.test.ts  package-verification.test.ts  provider-activation.test.ts  (+11 more)
(+39 files in other folders)
