[workspace]
members = ["crates/bridge-protocol", "crates/codex-bridge"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mizuikki/pi-codex-adaptor"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
