[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
codex-api = { path = "crates/codex-api" }
codex-async-utils = { path = "crates/codex-async-utils" }
codex-client = { path = "crates/codex-client" }
codex-execpolicy = { path = "crates/codex-execpolicy" }
codex-extension-items = { path = "crates/codex-extension-items" }
codex-http-client = { path = "crates/codex-http-client" }
codex-network-proxy = { path = "crates/codex-network-proxy" }
codex-protocol = { path = "crates/codex-protocol" }
codex-utils-absolute-path = { path = "crates/codex-utils-absolute-path" }
codex-utils-cache = { path = "crates/codex-utils-cache" }
codex-utils-home-dir = { path = "crates/codex-utils-home-dir" }
codex-utils-image = { path = "crates/codex-utils-image" }
codex-utils-output-truncation = { path = "crates/codex-utils-output-truncation" }
codex-utils-path-uri = { path = "crates/codex-utils-path-uri" }
codex-utils-pty = { path = "crates/codex-utils-pty" }
codex-utils-rustls-provider = { path = "crates/codex-utils-rustls-provider" }
codex-utils-string = { path = "crates/codex-utils-string" }
codex-websocket-client = { path = "crates/codex-websocket-client" }
anyhow = "1"
async-channel = "2.3.1"
base64 = "0.22.1"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.43"
clap = "4"
dirs = "6"
dunce = "1.0.4"
encoding_rs = "0.8.35"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
globset = "0.4"
http = "1.3.1"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
image = { version = "^0.25.9", default-features = false }
jsonptr = { version = "0.7.1", default-features = false }
lazy_static = "1"
libc = "0.2.182"
log = "0.4"
landlock = "0.4.4"
lru = "0.16.3"
mime_guess = "2.0.5"
multimap = "0.10.0"
opentelemetry = "0.31.0"
portable-pty = "0.9.0"
quick-xml = "0.41.0"
rand = "0.9"
regex-lite = "0.1.8"
reqwest = { version = "0.12", features = ["cookies"] }
rmcp = { version = "1.8.0", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
schemars = "0.8.22"
seccompiler = "0.5.0"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_with = "3.17"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
starlark = { version = "0.14.2", default-features = false }
strum = "0.27.2"
strum_macros = "0.28.0"
sys-locale = "0.3.2"
system-configuration = "0.7"
thiserror = "2.0.17"
time = "0.3.47"
tokio = "1"
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["proxy", "rustls-tls-native-roots"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
ts-rs = "11"
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
url = "2"
urlencoding = "2.1"
uuid = "1"
wildmatch = "2.6.1"
zstd = "0.13"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
