[package]
name = "codex-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "codex-bridge"
path = "src/main.rs"

[dependencies]
base64.workspace = true
codex-api = { path = "../../official/crates/codex-api" }
codex-apply-patch-adapter = { path = "../codex-apply-patch-adapter" }
codex-client = { path = "../../official/crates/codex-client" }
codex-http-client = { path = "../../official/crates/codex-http-client" }
codex-protocol = { path = "../../official/crates/codex-protocol" }
codex-tools = { path = "../../official/crates/codex-tools" }
codex-utils-image = { path = "../../official/crates/codex-utils-image" }
codex-utils-output-truncation = { path = "../../official/crates/codex-utils-output-truncation" }
codex-utils-pty = { path = "../../official/crates/codex-utils-pty" }
codex-websocket-client = { path = "../../official/crates/codex-websocket-client" }
http.workspace = true
openssl-sys.workspace = true
pi-codex-bridge-protocol = { path = "../bridge-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true

[lints]
workspace = true
