[package]
name = "codex-async-utils"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/async-utils/src/lib.rs"

[dependencies.tokio]
workspace = true
features = [ "macros", "rt", "rt-multi-thread", "time" ]

[dependencies.tokio-util]
workspace = true
