[package]
name = "codex-network-proxy"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
name = "codex_network_proxy"
path = "../../../vendor/openai-codex/codex-rs/network-proxy/src/lib.rs"
doctest = false

[dependencies.anyhow]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.clap]
workspace = true
features = [ "derive" ]

[dependencies.chrono]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-utils-home-dir]
workspace = true

[dependencies.codex-utils-rustls-provider]
workspace = true

[dependencies.globset]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.time]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "full" ]

[dependencies.tracing]
workspace = true

[dependencies.url]
workspace = true

[dependencies.rama-core]
version = "=0.3.0-alpha.4"

[dependencies.rama-http]
version = "=0.3.0-alpha.4"

[dependencies.rama-http-backend]
version = "=0.3.0-alpha.4"
features = [ "tls" ]

[dependencies.rama-net]
version = "=0.3.0-alpha.4"
features = [ "http", "tls" ]

[dependencies.rama-socks5]
version = "=0.3.0-alpha.4"

[dependencies.rama-tcp]
version = "=0.3.0-alpha.4"
features = [ "http" ]

[dependencies.rama-tls-rustls]
version = "=0.3.0-alpha.4"
features = [ "http" ]

[dependencies.rustls-native-certs]
workspace = true

[dependencies.sha2]
workspace = true

[target."cfg(target_family = \"unix\")".dependencies.rama-unix]
version = "=0.3.0-alpha.4"

[target."cfg(target_os = \"macos\")".dependencies]
security-framework = "3"

[target."cfg(windows)".dependencies]
schannel = "0.1"
