[package]
name = "codex-utils-absolute-path"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/utils/absolute-path/src/lib.rs"

[dependencies.dirs]
workspace = true

[dependencies.dunce]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.ts-rs]
workspace = true
features = [ "serde-json-impl", "no-serde-warnings" ]
