[package]
name = "codex-utils-cache"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/utils/cache/src/lib.rs"

[dependencies.lru]
workspace = true

[dependencies.sha1]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "sync", "rt", "rt-multi-thread" ]
