[package]
name = "codex-utils-output-truncation"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/utils/output-truncation/src/lib.rs"

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-string]
workspace = true
