[package]
name = "codex-utils-path-uri"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/utils/path-uri/src/lib.rs"

[dependencies.base64]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.thiserror]
workspace = true

[dependencies.ts-rs]
workspace = true
features = [ "no-serde-warnings" ]

[dependencies.url]
workspace = true

[dependencies.urlencoding]
workspace = true
