[package]
name = "codex-utils-pty"
version = "0.144.3"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.95"

[lib]
doctest = false
path = "../../../vendor/openai-codex/codex-rs/utils/pty/src/lib.rs"

[dependencies.anyhow]
workspace = true

[dependencies.portable-pty]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "io-util", "macros", "process", "rt-multi-thread", "sync", "time" ]

[target."cfg(windows)".dependencies]
filedescriptor = "0.8.3"
shared_library = "0.1.9"

[target."cfg(windows)".dependencies.lazy_static]
workspace = true

[target."cfg(windows)".dependencies.log]
workspace = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [ "handleapi", "minwinbase", "processthreadsapi", "synchapi", "winbase", "wincon", "winerror", "winnt" ]

[target."cfg(unix)".dependencies.libc]
workspace = true
